--- a/Project EFT/Views/Shared/Problem.cshtml
+++ b/Project EFT/Views/Shared/Problem.cshtml
@@ -42,6 +42,7 @@
             <!-- submission form-->
             <form action="~/Problem/CheckAnswer" method="post">
                 <input type="text" id="answer" name="answer" /><br />
+                <div id="answer-error" name="answer-error"></div>
                 <input type="submit" value="Submit your answer!" />
                 <div></div>
             </form>
