--- a/Project EFT/Views/Shared/Problem.cshtml
+++ b/Project EFT/Views/Shared/Problem.cshtml
@@ -4,7 +4,7 @@
 @using System.Diagnostics;
 @{ISession session = HttpContextAccessor.HttpContext.Session; }
 
-
+@{string wipeSubmissionsError = null; }
 
 @if (session.ContainsKey("problem"))
 {
@@ -18,6 +18,7 @@
     @if (session.ContainsKey("userInfo"))
     {
         StandardUser user = session.GetComplexObject<StandardUser>("userInfo");
+        wipeSubmissionsError = session.TryGetAndRemoveKey<string>("problem" + problem.ProblemNumber + "error");
 
         if (user.Submissions.ContainsKey(problem.ProblemNumber))
         {
@@ -77,17 +78,18 @@
                             <th>@sub.SubmissionDate</th>
                             @if (sub.IsCorrect)
                             {
-                                <th>Correct</th>
+                                <th class="success">Correct</th>
                             }
                             else
                             {
-                                <th>Incorrect</th>
+                                <th class="error">Incorrect</th>
                             }
                         </tr>
                     }
-
                 </table>
+                <button onclick="window.location.href='/Problem/WipeProblemSubmissions?problemID='+@problem.ProblemNumber">Wipe submissions for problem @problem.ProblemNumber</button>
             </div>
+            <div class="error">@wipeSubmissionsError</div>
         }
 
     }
