--- a/Project EFT/Views/Home/Index.cshtml
+++ b/Project EFT/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
                         }
 
                     </table>
-                    <button onclick="window.location.href='/Problem/WipeProblemSubmissions?problemID='+i">Wipe submissions for problem @i</button>
+                    <button onclick="window.location.href='/Problem/WipeProblemSubmissions?problemID='+@i">Wipe submissions for problem @i</button>
 
                 </div>
                 if (clearErrorMessage != null) { 
