--- a/Project EFT/Views/Shared/Problem.cshtml
+++ b/Project EFT/Views/Shared/Problem.cshtml
@@ -13,7 +13,7 @@
 
 
     <h1>@problem.Title</h1>
-    <h2>This is problem number @problem.ProblemNumber.</h2>
+    <h3>This is problem number @problem.ProblemNumber. It is worth @problem.PointsValue point(s).</h3>
     <div>@problem.Question</div>
     @if (session.ContainsKey("userInfo"))
     {
