--- a/Project EFT/Views/Home/Index.cshtml
+++ b/Project EFT/Views/Home/Index.cshtml
@@ -189,6 +189,7 @@
                 document.getElementById("username-error").innerHTML = usernameGood ? "" : "Please enter a valid username.";
                 document.getElementById("password-error").innerHTML = passwordGood ? "" : "Please enter a valid password.";
             }
+            passwordEntryElement.value = '';
         }
     </script>
 }
