--- a/Project EFT/Views/Shared/EditInfo.cshtml
+++ b/Project EFT/Views/Shared/EditInfo.cshtml
@@ -31,7 +31,6 @@
     }
 }
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.12.0/js/md5.min.js"></script>
-
 @if (user != null)
 {
     <form id="profilePicForm" action="~/EditInfo/editProfilePic" method="post" enctype="multipart/form-data">
@@ -66,7 +65,7 @@
         };
     </script>
 }
-
+@{ViewData["Title"] = "Edit Account Information";}
 <form id="usernameForm" action="~/EditInfo/editUsername" method="post">
     Enter New Username:<br>
     <input type="text" id="username" name="username" value="@username" /><br>
