--- a/Project EFT/Views/Shared/Signup.cshtml
+++ b/Project EFT/Views/Shared/Signup.cshtml
@@ -26,6 +26,9 @@
         session.Remove("email");
     }
 }
+
+@{ViewData["Title"] = "Signup"; }
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.12.0/js/md5.min.js"></script>
 <form id="signup" action="~/Signup/SubmitSignup" method="post">
     Enter Username:<br>
